testsuite/bsc.typechecker/kind/TypeAliasParamGivenTooFew_ToNone.bs.bsc-out.expected
checking package dependencies
compiling TypeAliasParamGivenTooFew_ToNone.bs
Error: "TypeAliasParamGivenTooFew_ToNone.bs", line 3, column 6: (T0024)
  The type `Foo' is applied to too many arguments.
