testsuite/bsc.typechecker/kind/TypeAliasParamGivenTooFew_ToNone.bs
package TypeAliasParamGivenTooFew_ToNone () where

type (Foo :: *) a = Bit a

